// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have all toDo items provided in list 1`] = `
<div
  className="toDo"
>
  <h1 />
  <ul>
    <li>
      <div
        className="toDoItem"
        id="toDoItem20100"
      >
        <h4
          className="task"
          onClick={[Function]}
        >
          <del>
            Wake up early
          </del>
        </h4>
        <button
          className="editButton"
          onClick={[Function]}
        >
          edit
        </button>
        <input
          className="taskInput"
          name="task"
          onChange={[Function]}
          value="Wake up early"
        />
      </div>
    </li>
    <li>
      <div
        className="toDoItem"
        id="toDoItem20101"
      >
        <h4
          className="task"
          onClick={[Function]}
        >
          <del>
            Sleep early
          </del>
        </h4>
        <button
          className="editButton"
          onClick={[Function]}
        >
          edit
        </button>
        <input
          className="taskInput"
          name="task"
          onChange={[Function]}
          value="Sleep early"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`Should have toDo item provided in list 1`] = `
<div
  className="toDo"
>
  <h1 />
  <ul>
    <li>
      <div
        className="toDoItem"
        id="toDoItem20100"
      >
        <h4
          className="task"
          onClick={[Function]}
        >
          <del>
            Wake up early
          </del>
        </h4>
        <button
          className="editButton"
          onClick={[Function]}
        >
          edit
        </button>
        <input
          className="taskInput"
          name="task"
          onChange={[Function]}
          value="Wake up early"
        />
      </div>
    </li>
  </ul>
</div>
`;
